--- a/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
+++ b/odoo/custom/src/private/thaiev_report/report/report_invoice_template.xml
@@ -319,24 +319,27 @@
                                         <t
                                             t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) in [0, 1] and float_compare(o.amount_untaxed, amount_by_group[2], precision_rounding=o.currency_id.rounding) == 0"
                                         >
-                                            <td>
-                                                <span>VAT 7%</span>
-                                            </td>
+                                            <td><span
+                                                    class="text-nowrap"
+                                                    t-esc="amount_by_group[0]"
+                                                /></td>
                                             <td class="text-right o_price_total">
                                                 <span
                                                     class="text-nowrap"
-                                                    t-esc="amount_by_group[3]"
+                                                    t-esc="amount_by_group[1]"
+                                                    t-options="{'widget': 'float', 'precision': 2}"
                                                 />
                                             </td>
                                         </t>
                                         <t t-else="">
                                             <td>
-                                                <span>VAT 7%</span>
+                                                <span t-esc="amount_by_group[0]" />
                                             </td>
                                             <td class="text-right o_price_total">
                                                 <span
                                                     class="text-nowrap"
-                                                    t-esc="amount_by_group[3]"
+                                                    t-esc="amount_by_group[1]"
+                                                    t-options="{'widget': 'float', 'precision': 2}"
                                                 />
                                             </td>
                                         </t>
